--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -33,7 +33,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="Builds/Sho2.apk"
+export_path="Builds/Sho.apk"
 patch_list=PoolStringArray(  )
 script_export_mode=1
 script_encryption_key=""
@@ -207,7 +207,7 @@ permissions/uninstall_shortcut=false
 permissions/update_device_stats=false
 permissions/use_credentials=false
 permissions/use_sip=false
-permissions/vibrate=false
+permissions/vibrate=true
 permissions/wake_lock=false
 permissions/write_apn_settings=false
 permissions/write_calendar=false
