--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -7,7 +7,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="Builds/Dynamic Map Loading.x86_64"
+export_path="Builds/Sho Level A03.x86_64"
 patch_list=PoolStringArray(  )
 script_export_mode=1
 script_encryption_key=""
@@ -44,6 +44,7 @@ graphics/32_bits_framebuffer=true
 xr_features/xr_mode=0
 xr_features/degrees_of_freedom=0
 xr_features/hand_tracking=0
+xr_features/focus_awareness=false
 one_click_deploy/clear_previous_install=true
 custom_template/debug=""
 custom_template/release=""
@@ -223,3 +224,36 @@ permissions/write_sms=false
 permissions/write_social_stream=false
 permissions/write_sync_settings=false
 permissions/write_user_dictionary=false
+
+[preset.2]
+
+name="Mac OSX"
+platform="Mac OSX"
+runnable=true
+custom_features=""
+export_filter="all_resources"
+include_filter=""
+exclude_filter=""
+export_path="Builds/Sho OS X.zip"
+patch_list=PoolStringArray(  )
+script_export_mode=1
+script_encryption_key=""
+
+[preset.2.options]
+
+custom_template/debug=""
+custom_template/release=""
+application/name="Sho"
+application/info="Made with Godot Engine"
+application/icon=""
+application/identifier="com.sho.unfa"
+application/signature=""
+application/short_version="0.1"
+application/version="0.1"
+application/copyright=""
+display/high_res=false
+privacy/camera_usage_description=""
+privacy/microphone_usage_description=""
+texture_format/s3tc=true
+texture_format/etc=false
+texture_format/etc2=false
